<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:id="@+id/textviewAccelerometer"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/Accelerometer" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/Temperature"
		android:id="@+id/textviewTemperature" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/Magnetometer"
		android:id="@+id/textviewMagnetometer" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/Compas"
		android:id="@+id/textviewCompass" />

	<ProgressBar android:id="@+id/progressbarOX"
		style="?android:attr/progressBarStyleHorizontal" 
		android:layout_width="fill_parent"
		android:max="100" android:progress="50" 
		android:secondaryProgress="75"
		android:layout_height="wrap_content" />
	<ProgressBar android:id="@+id/progressbarOY"
		style="?android:attr/progressBarStyleHorizontal" 
		android:layout_width="fill_parent"
		android:max="100" android:progress="50" 
		android:secondaryProgress="75"
		android:layout_height="wrap_content" />
	<ProgressBar android:id="@+id/progressbarOZ"
		style="?android:attr/progressBarStyleHorizontal" 
		android:layout_width="fill_parent"
		android:max="100" android:progress="50" 
		android:secondaryProgress="75"
		android:layout_height="wrap_content" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/Sensors"
		android:id="@+id/textviewSensors" />
	<android.opengl.GLSurfaceView
		android:id="@+id/eglview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
		
</LinearLayout>
